--- a/styles/style.main.css
+++ b/styles/style.main.css
@@ -1,7 +1,7 @@
 body{
   padding:0px;
   margin: 0px;
-  background-color: #AFD0DB;
+  background-image: url("../assets/pattern.jpg");
   width:100%;
   height:100vh;
 }
@@ -24,8 +24,11 @@ body{
 }
 h1{
   font-family: 'carino_sanssemibold';
+  text-shadow: 1px 1px 1px #2b3956,
+               2px 2px 1px #2b3956;
+               
   font-size: 8em;
-  color: #2b3956;
+  color: #e8464e;
   margin-top: 12%;
   margin-top: 6%;
 }
@@ -150,4 +153,48 @@ button:hover span{
 
 
 
+
+.bg-popContainer {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+  position: absolute;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  
+}
+.pop-box,
+.pop-box2 {
+  width: 500px;
+  max-width: 80%;
+  background-color: #cfe0e2;
+  
+  text-align: center;
+  padding: 20px;
+  position: relative;
+  padding-top: 30px;
+  cursor: default;
+}
+.pop-box {
+  height: 500px;
+}
+#closer {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 18px;
+  width: 20%;
+ height: 30%;
+}
+.rules{
+  font-family: 'carino_sanssemibold';
+  color: #2b3956;
+}
+.name{
+  font-family: 'carino_sanssemibold';
+  color: #2b3956;
+}
 
