--- a/styles/style.main.css
+++ b/styles/style.main.css
@@ -1,7 +1,7 @@
 body{
   padding:0px;
   margin: 0px;
-  background-image: url("../assets/pattern.jpg");
+  background-color: #AFD0DB;
   width:100%;
   height:100vh;
 }
